--- a/index.html
+++ b/index.html
@@ -192,6 +192,9 @@
             </p>
           </div>
         </div>
+        <button class="work-steps-btn btn">
+          Узнать свой эстетический код
+        </button>
       </div>
     </div>
 
