added block "Designer" and "Design projects"

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
       </div>
       <div class="header-info">
         <h1 class="header-info-title">Создаем дизайн-проекты для жизни <br> в комфорте и красоте!</h1>
-        <p class="header-info-price">от 160 грн/м2</p>
+        <p class="info-price">от 160 грн/м2</p>
         <p class="header-info-description">Бесплатная консультация с <br>дизайнером по вашему проекту</p>
         <button class="header-info-btn btn">Записаться на консультацию</button>
       </div>
@@ -195,6 +195,159 @@
         <button class="work-steps-btn btn">
           Узнать свой эстетический код
         </button>
+      </div>
+      <!-- Designer -->
+      <div class="designer">
+        <div class="designer-photo">
+          <img src="./img/designer.png" alt="Designer">
+        </div>
+        <div class="designer-info">
+          <p class="text-decorate designer-profile">Главный дизайнер</p>
+          <h3 class="designer-info-title">Диана Закирова</h3>
+          <ul class="designer-info-lists">
+            <li class="list-decorate">
+              <img class="designer-icon" src="./icons/completed.png" alt="Compleded">
+              <p>Дипломированный специалист "Дизайн интерьера" КГАСУ</p>
+            </li>
+            <li class="list-decorate">
+              <img class="designer-icon" src="./icons/completed.png" alt="Compleded">
+              <p>Повышение квалификации "Колледж искусств и дизайна Сент-Мартинс", Лондон</p>
+            </li>
+            <li class="list-decorate">
+              <img class="designer-icon" src="./icons/completed.png" alt="Compleded">
+              <p>Приглашенный дизайнер проектов "ТАИФ" и "Казань Экспо"</span>
+            </li>
+          </ul>
+          <p class="designer-info-text">
+            "Для меня дизайн проекты - не просто чертежи и картинки. <br>
+            Это возможность помочь людям полностью выразить  индивидуальность, мечты и атмосферу в пространстве дома”
+          </p>
+          <div class="designer-info-certs">
+            <span>
+              <img src="./img/certs/cert01.png" alt="Certificate">
+            </span>
+            <span>
+              <img src="./img/certs/cert02.png" alt="Certificate">
+            </span>
+            <span>
+              <img src="./img/certs/cert03.png" alt="Certificate">
+            </span>
+            <span>
+              <img src="./img/certs/cert04.png" alt="Certificate">
+            </span>
+            <span>
+              <img src="./img/certs/cert05.png" alt="Certificate">
+            </span>
+          </div>
+        </div>
+      </div>
+      <!-- Design project -->
+      <div class="design-project">
+        <h3 class="design-project-title"><span class="decorate">Что включает</span> в себя дизайн-проект</h3>
+        <div class="design-project-tariff">
+          <div class="tariff">
+            <h4 class="tariff-economy">Эконом</h4>
+            <p class="info-price tariff-price">от 160 грн/м2</p>
+            <ul class="tariff-lists">
+              <li class="list-decorate tariff-list">
+                <img class="designer-icon" src="./icons/completed.png" alt="Compleded">
+                <p>Обмерочный план;</p>
+              </li>
+              <li class="list-decorate tariff-list">
+                <img class="designer-icon" src="./icons/completed.png" alt="Compleded">
+                <p>План демонтажа/монтажа перегородок если требуется;</p>
+              </li>
+              <li class="list-decorate tariff-list">
+                <img class="designer-icon" src="./icons/completed.png" alt="Compleded">
+                <p>План расстановки мебели и техники.</p>
+              </li>
+            </ul>
+            <div class="tariff-term">
+              <p class="text-decorate">Срок исполнения 1 неделя</p>
+              <button class="tariff-btn btn">Выбрать</button>
+            </div>
+          </div>
+          <div class="tariff">
+            <h4 class="tariff-economy-plus">Эконом Плюс</h4>
+            <p class="info-price tariff-price">от 550 грн/м2</p>
+            <ul class="tariff-lists">
+              <li class="list-decorate tariff-list">
+                <img class="designer-icon" src="./icons/completed.png" alt="Compleded">
+                <p>Обмерочный план;</p>
+              </li>
+              <li class="list-decorate tariff-list">
+                <img class="designer-icon" src="./icons/completed.png" alt="Compleded">
+                <p>План демонтажа/монтажа перегородок если требуется;</p>
+              </li>
+              <li class="list-decorate tariff-list">
+                <img class="designer-icon" src="./icons/completed.png" alt="Compleded">
+                <p>План расстановки мебели и техники.</p>
+              </li>
+              <li class="list-decorate tariff-list">
+                <img class="designer-icon" src="./icons/completed.png" alt="Compleded">
+                <p>План розеток и выключателей;</p>
+              </li>
+              <li class="list-decorate tariff-list">
+                <img class="designer-icon" src="./icons/completed.png" alt="Compleded">
+                <p>План осветительных приборов;</p>
+              </li>
+              <li class="list-decorate tariff-list">
+                <img class="designer-icon" src="./icons/completed.png" alt="Compleded">
+                <p>План напольных покрытий;</p>
+              </li>
+              <li class="list-decorate tariff-list">
+                <img class="designer-icon" src="./icons/completed.png" alt="Compleded">
+                <p>Развертки (су, кухня, стены с нестандартной мебелью).</p>
+              </li>
+            </ul>
+            <div class="tariff-term">
+              <p class="text-decorate">Срок исполнения 1 неделя</p>
+              <button class="tariff-btn btn">Выбрать</button>
+            </div>
+          </div>
+          <div class="tariff">
+            <h4 class="tariff-extra">Екстра</h4>
+            <p class="info-price tariff-price">от 1 100 грн/м2</p>
+            <ul class="tariff-lists">
+              <li class="list-decorate tariff-list">
+                <img class="designer-icon" src="./icons/completed.png" alt="Compleded">
+                <p>Обмерочный план;</p>
+              </li>
+              <li class="list-decorate tariff-list">
+                <img class="designer-icon" src="./icons/completed.png" alt="Compleded">
+                <p>План демонтажа/монтажа перегородок если требуется;</p>
+              </li>
+              <li class="list-decorate tariff-list">
+                <img class="designer-icon" src="./icons/completed.png" alt="Compleded">
+                <p>План расстановки мебели и техники.</p>
+              </li>
+              <li class="list-decorate tariff-list">
+                <img class="designer-icon" src="./icons/completed.png" alt="Compleded">
+                <p>План розеток и выключателей;</p>
+              </li>
+              <li class="list-decorate tariff-list">
+                <img class="designer-icon" src="./icons/completed.png" alt="Compleded">
+                <p>План осветительных приборов;</p>
+              </li>
+              <li class="list-decorate tariff-list">
+                <img class="designer-icon" src="./icons/completed.png" alt="Compleded">
+                <p>План напольных покрытий;</p>
+              </li>
+              <li class="list-decorate tariff-list">
+                <img class="designer-icon" src="./icons/completed.png" alt="Compleded">
+                <p>Развертки (су, кухня, стены с нестандартной мебелью).</p>
+              </li>
+              <li class="list-decorate tariff-list">
+                <img class="designer-icon" src="./icons/completed.png" alt="Compleded">
+                <p>Ведомость в таблице используемых материалов с фото, объемами и ценами.</p>
+              </li>
+            </ul>
+            <div class="tariff-term">
+              <p class="text-decorate">Срок исполнения 1 неделя</p>
+              <button class="tariff-btn btn">Выбрать</button>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
 
