update project | added block "working us, consultation, partners, reviews"

--- a/index.html
+++ b/index.html
@@ -349,6 +349,169 @@
           </div>
         </div>
       </div>
+      <!-- Working us -->
+      <div class="working-us">
+        <h3 class="project-title"><span class="decorate">Почему стоит работать</span> именно с нами?</h3>
+        <div class="working-us-lists">
+          <div class="working-us-list us01">
+            <img src="./img/working-us/working-us-01.png" alt="Working us">
+            <p class="text-decorate">Опыт 6 лет</p>
+            <p>
+              Более 300 выполненных проектов.
+            </p>
+          </div>
+          <div class="working-us-list us02">
+            <img src="./img/working-us/working-us-02.png" alt="Working us">
+            <p class="text-decorate">Скорость</p>
+            <p>
+              Ваш проект будет выполнен качественно и точно в срок.
+            </p>
+          </div>
+          <div class="working-us-list us03">
+            <img src="./img/working-us/working-us-03.png" alt="Working us">
+            <p class="text-decorate">Передовые методики</p>
+            <p>
+              Наши специалисты ежегодно повышают квалификацию у ведущих дизайнеров за рубежом.
+            </p>
+          </div>
+          <div class="working-us-list us01">
+            <img src="./img/working-us/working-us-04.png" alt="Working us">
+            <p class="text-decorate">Строгие расчеты</p>
+            <p>Все расчеты проводятся максимально точно с учетом особенностей вашего помещения. Строители скажут вам спасибо.</p>
+          </div>
+          <div class="working-us-list us01">
+            <img src="./img/working-us/working-us-05.png" alt="Working us">
+            <p class="text-decorate">Выгодные условия с поставщиками</p>
+            <p>
+              При желании поможем с реализацией проекта на особых условиях с поставщиками материалов и производителями мебели
+            </p>
+          </div>
+          <div class="working-us-list us01">
+            <img src="./img/working-us/working-us-06.png" alt="Working us">
+            <p class="text-decorate">Договор с гарантией</p>
+            <p>
+              Гарантия точности расчетов и соответствия дизайн-проекта разметке помещения закреплены в договоре.
+            </p>
+          </div>
+        </div>
+      </div>
+      <!-- Consultation -->
+      <div class="consultation">
+        <h3 class="consultation-title"><span class="decorate">Реализация дизайн-проекта</span> на <br> выгодных условиях</h3>
+        <div class="consultation-wrap">
+          <div class="consultation-img">
+          <img src="./img/redesign.png" alt="Redesign">
+        </div>
+        <div class="consultation-info">
+          <p>
+            Для юр.лиц наша компания предлагает услугу "офис под ключ". Команда специалистов под управлением главного дизайнера подготовит Ваше помещение к работе. Мы берем на себя поставку:
+          </p>
+          <ul class="consultation-lists">
+            <li class="consultation-list">
+              <img class="designer-icon" src="./icons/completed.png" alt="Compleded">
+              <p>Офисной мебели</p>
+            </li>
+            <li class="consultation-list">
+              <img class="designer-icon" src="./icons/completed.png" alt="Compleded">
+              <p>Мебели для зон ожидания</p>
+            </li>
+            <li class="consultation-list">
+              <img class="designer-icon" src="./icons/completed.png" alt="Compleded">
+              <p>Приемных</p>
+            </li>
+            <li class="consultation-list">
+              <img class="designer-icon" src="./icons/completed.png" alt="Compleded">
+              <p>Офисных кухонь</p>
+            </li>
+            <li class="consultation-list">
+              <img class="designer-icon" src="./icons/completed.png" alt="Compleded">
+              <p>Светотехнического оборудования (светильники настенные, потолочные)</p>
+            </li>
+            <li class="consultation-list">
+              <img class="designer-icon" src="./icons/completed.png" alt="Compleded">
+              <p>Стеклянных перегородок </p>
+            </li>
+            <li class="consultation-list">
+              <img class="designer-icon" src="./icons/completed.png" alt="Compleded">
+              <p>Специальных офисных напольных покрытий</p>
+            </li>
+          </ul>
+          <p>С дальнейшим обустройством офиса согласно дизайн-проекту.</p>
+          <button class="consultation-btn btn">Получить консультацию</button>
+        </div>
+        </div>
+      </div>
+      <!-- How we work -->
+      <div class="work-process">
+        <h3 class="work-process-title">Как мы  <span class="decorate">работаем</span></h3>
+        <div class="work-process-steps">
+          <div class="work-process-step arrow">
+            <img src="./img/work-process/01.png" alt="Process">
+            <p class="text-decorate">Замер и консультация</p>
+          </div>
+          <div class="work-process-step arrow">
+            <img src="./img/work-process/02.png" alt="Process">
+            <p class="text-decorate">Обмерочный план/договор</p>
+          </div>
+          <div class="work-process-step arrow">
+            <img src="./img/work-process/03.png" alt="Process">
+            <p class="text-decorate">План расстановки мебели</p>
+          </div>
+          <div class="work-process-step">
+            <img src="./img/work-process/04.png" alt="Process">
+            <p class="text-decorate">Подбор материалов/концепция <br>интерьера</p>
+          </div>
+          <div class="work-process-step arrow">
+            <img src="./img/work-process/05.png" alt="Process">
+            <p class="text-decorate">3D визуализация проекта</p>
+          </div>
+          <div class="work-process-step arrow">
+            <img src="./img/work-process/06.png" alt="Process">
+            <p class="text-decorate">Технические чертежи</p>
+          </div>
+          <div class="work-process-step arrow">
+            <img src="./img/work-process/07.png" alt="Process">
+            <p class="text-decorate">Сдача проекта в бумажном и <br>электронном виде</p>
+          </div>
+          <div class="work-process-step">
+            <img src="./img/work-process/08.png" alt="Process">
+            <p class="text-decorate">Авторский надзор</p>
+          </div>
+
+
+        </div>
+      </div>
+      <!-- Partners -->
+      <div class="partners">
+        <h3 class="partners-title">Наши <span class="decorate">партнеры</span></h3>
+        <div class="partners-slider">
+          
+        </div>
+      </div>
+      <!-- Reviews -->
+      <div class="reviews">
+        <h3 class="reviews-title">Отзывы</h3>
+        <div class="reviews-img">
+
+        </div>
+        <div class="reviews-project">
+
+        </div>
+        <div class="reviews-about">
+
+        </div>
+      </div>
+      <!-- Questions -->
+      <div class="questions">
+        <h3 class="questions-title">Остались вопросы?</h3>
+        <p class="text-decorate">Будем рады ответить</p>
+        <div class="contact">
+          
+        </div>
+        <div class="map">
+
+        </div>
+      </div>
     </div>
 
     <script src="./js/main.js"></script>
