added completed desktop version site

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="./css/style.css" />
   </head>
   <body>
+    <!-- Header -->
     <header class="header">
       <div class="header-nav">
         <div class="header-nav-logo">
@@ -41,7 +42,6 @@
         <button class="header-info-btn btn">Записаться на консультацию</button>
       </div>
     </header>
-
     <!-- Main -->
     <div class="main">
       <!-- Design block -->
@@ -403,7 +403,7 @@
           <img src="./img/redesign.png" alt="Redesign">
         </div>
         <div class="consultation-info">
-          <p>
+          <p class="consultation-info-description">
             Для юр.лиц наша компания предлагает услугу "офис под ключ". Команда специалистов под управлением главного дизайнера подготовит Ваше помещение к работе. Мы берем на себя поставку:
           </p>
           <ul class="consultation-lists">
@@ -436,7 +436,7 @@
               <p>Специальных офисных напольных покрытий</p>
             </li>
           </ul>
-          <p>С дальнейшим обустройством офиса согласно дизайн-проекту.</p>
+          <p class="consultation-info-description">С дальнейшим обустройством офиса согласно дизайн-проекту.</p>
           <button class="consultation-btn btn">Получить консультацию</button>
         </div>
         </div>
@@ -485,31 +485,65 @@
       <div class="partners">
         <h3 class="partners-title">Наши <span class="decorate">партнеры</span></h3>
         <div class="partners-slider">
-          
+          <img src="./img/partners/01.png" alt="Partners" class="partners-slider-img">
+          <img src="./img/partners/02.png" alt="Partners" class="partners-slider-img">
+          <img src="./img/partners/03.png" alt="Partners" class="partners-slider-img">
+          <img src="./img/partners/04.png" alt="Partners" class="partners-slider-img">
         </div>
       </div>
       <!-- Reviews -->
       <div class="reviews">
         <h3 class="reviews-title">Отзывы</h3>
-        <div class="reviews-img">
-
-        </div>
-        <div class="reviews-project">
-
-        </div>
-        <div class="reviews-about">
-
+        <div class="reviews-info">
+          <div class="reviews-img">
+            <img src="./img/designer-profile.png" alt="Profile">
+          </div>
+          <div class="reviews-project">
+            <h5 class="text-decorate reviews-project-title">Дизайн проект</h5>
+            <img src="./img/projects/01.png" alt="Project">
+            <img src="./img/projects/02.png" alt="Project">
+            <img src="./img/projects/03.png" alt="Project">
+          </div>
+          <div class="reviews-about">
+            <h4 class="reviews-username">Имя Фамилия</h4>
+            <p class="reviews-about-description">
+              Прежде всего, реализация намеченных плановых заданий выявляет срочную потребность форм воздействия. С другой стороны, начало повседневной работы по формированию позиции позволяет выполнить важные задания по разработке позиций, занимаемых участниками в отношении поставленных задач. Имеется спорная точка зрения, гласящая примерно следующее: реплицированные с зарубежных источников, современные исследования, инициированные исключительно синтетически, описаны максимально подробно.
+            </p>
+            <button class="reviews-btn btn">Хочу так же</button>
+          </div>
         </div>
       </div>
       <!-- Questions -->
       <div class="questions">
         <h3 class="questions-title">Остались вопросы?</h3>
         <p class="text-decorate">Будем рады ответить</p>
-        <div class="contact">
-          
-        </div>
-        <div class="map">
-
+        <div class="contacts">
+          <div class="contacts-group">
+            <div class="contacts-info">
+              <div class="contacts-group-call">
+               <img src="./icons/phone.png" alt="Phone">
+                <p class="contact-phone">+38 (068) xxx xx xx</p>
+              </div>
+            <button class="header-info-btn btn">Заказать звонок</button>
+          </div>
+          <div class="group-social">
+            <div class="whatsapp text-decorate">
+              <img class="whatsapp-img" src="./icons/whatsapp-white.png" alt="Whatsapp">
+              <p>WhatsApp</p>
+            </div>
+            <div class="telegram text-decorate">
+              <img class="tg-img" src="./icons/tg-white.png" alt="Telegram">
+              <p>Telegram</p>
+            </div>
+            <div class="instagram text-decorate">
+              <img class="instagram-img" src="./icons/instagram-white.png" alt="Instagram">
+              <p>Instagram</p>
+            </div>
+          </div>
+          </div>
+          <div class="map">
+            <img src="./img/map.png" alt="Map">
+          </div>
         </div>
       </div>
     </div>
